# AntCheating-ETS2-Server

./: pyproject.toml
antcheat/: main.py
